<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/apple5"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">


        <EditText
            android:id="@+id/edittext_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="#E38C8C"
            android:inputType="numberDecimal"
            android:text="@string/edittext"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edittext_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="#E39795"
            android:text="@string/_0"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            android:ems="10"
            tools:ignore="LabelFor"
            />

        <TextView
            android:id="@+id/textview_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#513535"
            android:gravity="end"
            android:padding="10dp"
            android:text="@string/_0"
            android:textColor="#FFFFFF"
            android:ems="10"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#302323"
                android:text="@string/clear"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_addition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#331D1D"
                android:text="@string/addition"
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle"/>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_subtraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#302323"
                android:text="@string/subtraction"
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/button_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#331D1D"
                android:text="@string/power"
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle"/>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_multiplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#302323"
                android:text="@string/multiplication"
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/button_division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#331D1D"
                android:text="@string/division"
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle"/>




        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4C3B3B"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/developer_info"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/info2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4C3B3B"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/laxmankoirala_gmail_com"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />


</LinearLayout>