<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/apple10"
    tools:context=".MainActivity_5th">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:background="@drawable/roundbutton"
                android:gravity="center"
                android:text="@string/convert_miles_to_km"
                android:textColor="#F6F2F2"
                android:textSize="30sp"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_input_mi"
                android:textColor="#DFC7C7"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edittext_for_mi"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:autofillHints=""
                android:background="@drawable/roundbutton"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="@string/j"
                android:textColor="#FDFDFD"
                android:textSize="24sp"
                tools:ignore="LabelFor,MissingConstraints,NotSibling" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result3"
                android:textColor="#DFC7C7"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textview_result"
                android:layout_width="321dp"
                android:layout_height="78dp"
                android:autofillHints=""
                android:background="@drawable/roundbutton"
                android:ems="10"
                android:gravity="center"
                android:text="@string/k"
                android:textColor="#FDFDFD"
                android:textSize="24sp"
                tools:ignore="LabelFor" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="297dp"
            android:orientation="horizontal"
            android:paddingTop="115dp">

            <Button
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#6FABDA"
                android:text="@string/clearok"
                android:textSize="30sp"

                tools:ignore="ButtonStyle,MissingConstraints" />

            <Button
                android:id="@+id/button_calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#CEA9D5"
                android:text="@string/ok"
                android:textSize="30sp"
                tools:ignore="ButtonStyle,MissingConstraints" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
